Fixed - Alignment on homepage carousel indicators

--- a/public/assets/css/_homepage.scss
+++ b/public/assets/css/_homepage.scss
@@ -4,7 +4,7 @@
   }
   //  carousel controls
   .carousel-indicators {
-    bottom: 0;
+    bottom: 10px;
   }
   .carousel-control {
     background: transparent;
